fix menu on mobile view

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -2,6 +2,10 @@
 	
 }
 
+.mobile-menu {
+	height: 95vh;
+}
+
 .menu-button {
 	padding: 10px;
 	cursor: pointer;
